<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llLoginContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llPhoneAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAppIcon"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_marginTop="90dp"
                android:src="@drawable/ic_login"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginTop="10dp"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/purple"
                app:layout_constraintTop_toBottomOf="@+id/ivAppIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvYourPhoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="@color/purple"
                android:text="@string/your_phone_num"
                app:layout_constraintTop_toBottomOf="@+id/tvAppName"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llPhoneNumContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/tvYourPhoneNum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCountryCode"
                    android:layout_width="68dp"
                    android:layout_height="53dp"
                    android:text="@string/country_code"
                    android:background="@drawable/bg_purple_border"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textColor="@color/purple"
                    android:textSize="16sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvMobileNumberInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMobileNumberInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/purple"
                        android:background="@drawable/bg_purple_border"
                        android:maxLength="10"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="@color/red"
                tools:text="Telefon numarası yanlış"
                app:layout_constraintTop_toBottomOf="@+id/llPhoneNumContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnSendCode"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="55dp"
                android:src="@drawable/ic_right_arrow"
                android:background="@drawable/bg_circular_pink"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvErrorMessage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llVerifyCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivTimer"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_marginTop="90dp"
                android:src="@drawable/ic_timer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="38sp"
                tools:text="1:25"
                android:gravity="center"
                android:textColor="@color/purple"
                app:layout_constraintTop_toBottomOf="@id/ivTimer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVerificationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textSize="16sp"
                android:textColor="@color/purple"
                android:text="@string/verification_code"
                app:layout_constraintStart_toStartOf="@id/otpView"
                app:layout_constraintTop_toBottomOf="@+id/tvTimer"/>

            <com.mukesh.OtpView
                android:id="@+id/otpView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:itemWidth="52dp"
                app:itemHeight="47dp"
                android:layout_marginTop="10dp"
                android:inputType="number"
                android:itemBackground="@drawable/bg_purple_border"
                android:textColor="@color/purple"
                app:itemCount="6"
                app:viewType="none"
                android:focusableInTouchMode="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvVerificationTitle"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWrongCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                tools:text="@string/code_is_wrong"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otpView"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="33dp"
                android:layout_marginHorizontal="55dp"
                android:text="@string/verify"
                android:background="@drawable/bg_purple"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWrongCode"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvResendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textColor="@color/purple"
                android:text="@string/resend_code"
                app:layout_constraintTop_toBottomOf="@id/btnContinue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>